# xbrowser

./: Cargo.toml  README.md
src/: chrome.rs  cookiejar.rs  firefox.rs  lib.rs  main.rs
src/chrome/: cookie.rs
src/chrome/cookie/: error.rs
src/firefox/: cookie.rs
