[package]
name = "xbrowser"
version = "0.1.0"
edition = "2021"
authors = ["Evan Carroll <me@evancarroll.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.3"
base64 = "0.21.4"
cbc = "0.1.2"
chrono = { version = "0.4.31", features = ["serde"] }
cipher = "0.4.4"
clap = { version = "4.4.6", features = ["derive", "env"] }
derive_builder = "0.12.0"
gio = { version = "0.18.2", optional = true }
itertools = "0.11.0"
libsecret = { version = "0.4.0", optional = true }
num_enum = "0.7.0"
once_cell = "1.18.0"
pbkdf2 = "0.12.2"
rusqlite = "0.29.0"
rust-ini = "0.19.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
sha1 = "0.10.6"
thiserror = "1.0.49"


[features]
default=["chrome", "firefox"]
chrome=["libsecret"]
firefox=[]
libsecret=["dep:libsecret", "dep:gio"]
